--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ body {
   
 
 .wish-button {
-    background: #ff9800;
+    background: #096e0e;
     color: #fff;
     font-size: 1.2rem;
     border: none;
